# aspire-orchestrator

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  README.md
crates/ao-core/: Cargo.toml
crates/ao-core/src/: error.rs  lib.rs
crates/ao-core/src/models/: blueprint.rs  config.rs  discovery.rs  mod.rs  repo_candidate.rs  slot.rs
crates/ao-core/src/services/: agent.rs  agent_host.rs  aspire.rs  blueprint.rs  config_loader.rs  discovery.rs  git.rs  log_tailer.rs  mod.rs  ports.rs  repo_finder.rs  slot_manager.rs  state.rs  tmux.rs
crates/ao-tui/: Cargo.toml
crates/ao-tui/src/: app.rs  event.rs  host.rs  keys.rs  lib.rs  main.rs
crates/ao-tui/src/ui/: dashboard.rs  detail_panel.rs  dialog_agent.rs  dialog_batch_progress.rs  dialog_blueprint.rs  dialog_confirm.rs  dialog_create.rs  dialog_help.rs  layout.rs  log_view.rs  mod.rs  multiplex_filter_bar.rs  multiplex_log.rs  slot_table.rs  status_bar.rs  terminal_view.rs
crates/ao-tui/tests/: test_agent_dialog.rs  test_confirm_dialog.rs  test_create_dialog.rs  test_detail_panel.rs  test_help_dialog.rs  test_slot_list.rs
crates/ao-tui/tests/common/: mod.rs
crates/ao-tui/tests/snapshots/: test_agent_dialog__agent_dialog_all_fields_filled.snap  test_agent_dialog__agent_dialog_default.snap  test_agent_dialog__agent_dialog_tools_focused.snap  test_agent_dialog__agent_dialog_with_prompt.snap  test_confirm_dialog__confirm_destroy.snap  test_confirm_dialog__confirm_quit.snap  test_confirm_dialog__loading_creating.snap  test_create_dialog__create_dialog_candidate_at_last.snap  test_slot_list__empty_slot_list.snap  (+24 more)
(+2 files in other folders)
